App Center Test対応

--- a/ui/espresso/BasicSample/app/build.gradle
+++ b/ui/espresso/BasicSample/app/build.gradle
@@ -1,16 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion rootProject.buildToolsVersion
+    compileSdkVersion 27
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.example.android.testing.espresso.BasicSample"
-        minSdkVersion 14
-        targetSdkVersion 28
+        minSdkVersion 15
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
     lintOptions {
         abortOnError false
@@ -20,13 +25,30 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     // App dependencies
-    implementation 'androidx.annotation:annotation:' + rootProject.androidxLibVersion;
+    def appCenterSdkVersion = '1.5.0'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
+    //implementation 'androidx.annotation:annotation:' + rootProject.androidxLibVersion;
     implementation 'com.google.guava:guava:26.0-android'
+    // App's dependencies, including test
+    implementation 'com.android.support:support-annotations:28.0.0'
 
     // Testing-only dependencies
-    androidTestImplementation 'androidx.test:core:' + rootProject.coreVersion;
-    androidTestImplementation 'androidx.test.ext:junit:' + rootProject.extJUnitVersion;
-    androidTestImplementation 'androidx.test:runner:' + rootProject.runnerVersion;
-    androidTestImplementation 'androidx.test.espresso:espresso-core:' + rootProject.espressoVersion;
+    testImplementation 'junit:junit:4.12'
+
+    // AndroidTesting-only dependencies
+//    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+//    androidTestImplementation 'androidx.test:core:' + rootProject.coreVersion;
+//    androidTestImplementation 'androidx.test.ext:junit:' + rootProject.extJUnitVersion;
+//    androidTestImplementation 'androidx.test:runner:' + rootProject.runnerVersion;
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:' + rootProject.espressoVersion;
+    androidTestImplementation('com.microsoft.appcenter:espresso-test-extension:1.3')
 }
