--- a/ui/espresso/BasicSample/app/src/androidTest/AndroidManifest.xml
+++ b/ui/espresso/BasicSample/app/src/androidTest/AndroidManifest.xml
@@ -19,9 +19,9 @@
       package="com.example.android.testing.espresso.BasicSample"
       android:versionCode="1"
       android:versionName="1.0">
-
+<!--
     <instrumentation android:targetPackage="com.example.android.testing.espresso.BasicSample"
-                     android:name="androidx.test.runner.AndroidJUnitRunner"/>
-
+                     android:name="android.support.test.runner.AndroidJUnitRunner"/>
+-->
     <application tools:replace="label" android:label="BasicSampleTest" />
 </manifest>
